
    MAPREDUCE-6069. native-task: Lint/style fixes and removal of unused code
    (todd)

    MAPREDUCE-6074. native-task: fix release audit, javadoc, javac warnings
    (todd)

    MAPREDUCE-6077. native-task: Remove CustomModule examples in nativetask (seanzhong)

    MAPREDUCE-6078. native-task: fix gtest build on macosx (Binglin Chang)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

   MAPREDUCE-6284. Add Task Attempt State API to MapReduce Application
   Master REST API. (Ryu Kobayashi via ozawa)

   MAPREDUCE-6364. Add a "Kill" link to Task Attempts page. (Ryu Kobayashi
   via ozawa)

   MAPREDUCE-6304. Specifying node labels when submitting MR jobs.
   (Naganarasimha G R via wangda)

  IMPROVEMENTS

    MAPREDUCE-6291. Correct mapred queue usage command.
    (Brahma Reddu Battula via harsh)

    MAPREDUCE-579. Streaming "slowmatch" documentation. (harsh)

    MAPREDUCE-6287. Deprecated methods in org.apache.hadoop.examples.Sort
    (Chao Zhang via harsh)

    MAPREDUCE-5190. Unnecessary condition test in RandomSampler.
    (Jingguo Yao via harsh)

    MAPREDUCE-6239. Consolidate TestJobConf classes in
    hadoop-mapreduce-client-jobclient and hadoop-mapreduce-client-core
    (Varun Saxena via harsh)

    MAPREDUCE-5807. Print usage by TeraSort job. (Rohith via harsh)

    MAPREDUCE-4653. TestRandomAlgorithm has an unused "import" statement.
    (Amir Sanjar via harsh)

    MAPREDUCE-6100. replace "mapreduce.job.credentials.binary" with
    MRJobConfig.MAPREDUCE_JOB_CREDENTIALS_BINARY for better readability.
    (Zhihai Xu via harsh)

    MAPREDUCE-6105. Inconsistent configuration in property
    mapreduce.reduce.shuffle.merge.percent. (Ray Chiang via harsh)

    MAPREDUCE-4414. Add main methods to JobConf and YarnConfiguration,
    for debug purposes. (Plamen Jeliazkov via harsh)

    MAPREDUCE-5755. MapTask.MapOutputBuffer#compare/swap should have
    @Override annotation. (ozawa)
